--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
                 <div>
                     <h1 id="user-name">Astha Sharma</h1>
-                    <p id="bio">Industrial Engineer - Supply Chain Management.</p>
+                    <p id="bio">Industrial Engineer - Supply Chain Management | MS IE@Gatech </p>
                     <p id="email">👉 benu.astha@gmail.com</p>
                 </div>  
             </section>
