--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
                 <div>
                     <h1 id="user-name">Astha Sharma</h1>
                     <p id="bio"> Student | Industrial Engineer | Supply Chain Analyst | Music Enthusiast </p>
-                    <p id="email">👉 benu.astha@gmail.com</p>
                 </div>  
             </section>
 
@@ -26,6 +25,7 @@
                 <div id="socials--list">
                     <a href="https://www.linkedin.com/in/astha-sharma11/" target="_blank">LinkedIn</a>
                     <a href="https://www.instagram.com/benu_astha/" target="_blank">Instagram</a>
+                    <a href="mailto:benu.astha@gmail.com" class="email-link">Mail</a>
                     <a href="./assets/Astha Sharma_Resume_University11.docx" target="_blank">Download Resume</a>
 
                 </div>
