--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div id="socials--list">
                     <a href="https://www.linkedin.com/in/astha-sharma11/" target="_blank">LinkedIn</a>
                     <a href="https://www.instagram.com/benu_astha/" target="_blank">Instagram</a>
-                    <a href="mailto:benu.astha@gmail.com" class="email-link">Mail</a>
+                    <a href="mailto:benu.astha@gmail.com" class="email-link">EMail</a>
                     <a href="./assets/Astha Sharma_Resume_University11.docx" target="_blank">Download Resume</a>
 
                 </div>
