--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
                 <div>
                     <h1 id="user-name">Astha Sharma</h1>
-                    <p id="bio"> Student | Industrial Engineer | Supply Chain Analyst | Music Enthusiast </p>
+                    <p id="bio"> MS Industrial Engineering @GATech | Supply Chain Analyst | Music Enthusiast </p>
                 </div>  
             </section>
 
@@ -26,7 +26,7 @@
                     <a href="https://www.linkedin.com/in/astha-sharma11/" target="_blank">LinkedIn</a>
                     <a href="https://www.instagram.com/benu_astha/" target="_blank">Instagram</a>
                     <a href="mailto:benu.astha@gmail.com" class="email-link">Email</a>
-                    <a href="./assets/Astha Sharma_Resume_University11.docx" target="_blank">Download Resume</a>
+                    <a href="./assets/Astha Sharma_Resume_University11.docx" target="_blank">Resume</a>
 
                 </div>
             </section>
@@ -81,7 +81,7 @@
             <div class="line-break"></div>
             <div class="card--work-history">
                 <strong>🛒 ASSISTANT SUPPLY CHAIN PLANNER | SWIGGY</strong>
-                <p>02/2022 - June 2023</p>
+                <p>02/2022 - 06/2023</p>
                 <p>Worked on demand planning for supply chain operations encompassing grocery and daily essentials.</p>
                 <ul>
                     <li>Daily/Weekly Forecasting (overseeing around 5000 SKU's)</li>
@@ -116,7 +116,7 @@
 
             <div class="card--education">
                 <strong>🐝 MS INDUSTRIAL ENGINEERING | GEORGIA INSTITUTE OF TECHNOLOGY</strong>
-                <p>08/2023 - Present</p>
+                <p>08/2023 - 12/2024(Expected)</p>
                 <p>Master's in Industrial Engineering at Georgia Tech, focusing on Supply Chain and Analytics.</p>
                 <ul>
                     <li>GPA 4.0; Graduating December 2024 </li>
