--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
                 <div>
                     <h1 id="user-name">Astha Sharma</h1>
-                    <p id="bio"> MS Industrial Engineering @GATech | Supply Chain Analyst | Music Enthusiast </p>
+                    <p id="bio"> MS IE @GATech | Supply Chain Analyst | Music Enthusiast </p>
                 </div>  
             </section>
 
