--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <div class="line-break"></div>
 
             <div class="card--education">
-                <strong>🎓 Btech MECHANICAL ENGINEERING | BML MUNJAL UNIVERSITY</strong>
+                <strong>🎓 BTech MECHANICAL ENGINEERING | BML MUNJAL UNIVERSITY</strong>
                 <p>08/2016 - 07/2020</p>
                 <p>Bachelor's in Mechanical Engineering focusing on Supply Chain and Analytics.</p>
                 <ul>
