--- a/index.html
+++ b/index.html
@@ -67,12 +67,18 @@
 
             <div class="card--work-history">
                 <strong>📉 SUPPLY CHAIN ANALYST INTERN | RELEX Solutions</strong>
-                <p>05/2024 - Present</p>
+                <p>05/2024 - 08/2024 Full Time</p>
                 <p>Working as a Supply Chain Analyst Intern at Relex, specializing in implementing machine learning-based forecasting using Relex software.</p>
                 <ul>
-                    <li>Designing and implementing forecasting models to improve client accuracy </li>
-                    <li>Utilizing advanced ML tools to refine and optimize forecasting processes</li>
-                    <li>Integrating seasonality, promotions, events, and spoilage into forecasting models for better insights</li>
+                    <li>Designing and Implementing forecasting models to improve client accuracy by 30 pp. </li>
+                    <li>Utilizing advanced ML tools to refine and optimize forecasting processes.</li>
+                    <li>Integrating seasonality, promotions and events into forecasting models for better insights.</li>
+                </ul>
+                 <p>08/2024 - Present Part Time</p>
+                <p>Working as a Part Time Intern at Relex, now focusing on diffferent aspects of Supply Chain.</p>
+                <ul>
+                    <li>Implement replenishment strategies using RELEX software.  </li>
+                    <li>Support continuous improvement in forecasting and replenishment by leveraging ML.</li>
                 </ul>
             </div>
         
