--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
 
             <div class="card--work-history">
                 <strong>📉 SUPPLY CHAIN ANALYST INTERN | RELEX Solutions</strong>
-                <p>08/2024 - Present Part Time</p>
+                <p>08/2024 - Present <b>Part Time</b></p>
                 <p>Working as a Part Time Intern at Relex, now focusing on diffferent aspects of Supply Chain.</p>
                 <ul>
                     <li>Implement replenishment strategies using RELEX software.  </li>
                     <li>Support continuous improvement in forecasting and replenishment by leveraging ML.</li>
                 </ul>
-                <p>05/2024 - 08/2024 Full Time</p>
+                <p>05/2024 - 08/2024 <b>Full Time</b></p>
                 <p>Working as a Supply Chain Analyst Intern at Relex, specializing in implementing machine learning-based forecasting using Relex software.</p>
                 <ul>
                     <li>Designing and Implementing forecasting models to improve client accuracy by 30 pp. </li>
@@ -138,8 +138,8 @@
                 <p>08/2016 - 07/2020</p>
                 <p>Bachelor's in Mechanical Engineering focusing on Supply Chain and Analytics.</p>
                 <ul>
-                    <li>Academic Excellence Medal , Batch 2016-20 of BML Munjal Universit</li>
-                    <li>Founder's Medal for the Best Outgoing Student of SoET of Batch 2016-20 of BML Munjal University</li>
+                    <li>Academic Excellence Medal , Batch 2016-20 of BML Munjal University.</li>
+                    <li>Founder's Medal for the Best Outgoing Student of SoET of Batch 2016-20 of BML Munjal University.</li>
                 </ul>
             </div>  
            </section>    
