--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <li>Support continuous improvement in forecasting and replenishment by leveraging ML.</li>
                 </ul>
                 <p>05/2024 - 08/2024 <em>Full Time</em></p>
-                <p>Working as a Supply Chain Analyst Intern at Relex, specializing in implementing machine learning-based forecasting using Relex software.</p>
+                <p>Worked as a Supply Chain Analyst Intern at Relex, specializing in implementing machine learning-based forecasting using Relex software.</p>
                 <ul>
                     <li>Designing and Implementing forecasting models to improve client accuracy by 30 pp. </li>
                     <li>Utilizing advanced ML tools to refine and optimize forecasting processes.</li>
