--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <section class="section--page">
                 <h2>Qualifications</h2>
                 <ul id="qualifications--list">
-                    <li>✔️ 2.5+ Years experience with Supply Chain Planning.</li>
+                    <li>✔️ 3 Years experience with Supply Chain Planning.</li>
                     <li>✔️ Extensive knowledge in in Forecasting and Replenishment.</li>
                     <li>✔️ Proven track record in Wastage Reduction and Availability Improvement. </li>
                     <li>✔️ 1.5 Years experience with Logistic Planning.</li>
@@ -76,9 +76,9 @@
                 <p>05/2024 - 08/2024 <em>Full Time</em></p>
                 <p>Worked as a Supply Chain Analyst Intern at Relex, specializing in implementing machine learning-based forecasting using Relex software.</p>
                 <ul>
-                    <li>Designing and Implementing forecasting models to improve client accuracy by 30 pp. </li>
-                    <li>Utilizing advanced ML tools to refine and optimize forecasting processes.</li>
-                    <li>Integrating seasonality, promotions and events into forecasting models for better insights.</li>
+                    <li>Designed and Implemented forecasting models to improve client accuracy by 30 pp. </li>
+                    <li>Utilized advanced ML tools to refine and optimize forecasting processes.</li>
+                    <li>Integrated seasonality, promotions and events into forecasting models for better insights.</li>
                 </ul>
                  
             </div>
